# doc-ama

./: .env.template  .gitignore  3DAY_IMPLEMENTATION_CHECKLIST.md  CLAUDE.md  LEARNING_PLAN.md  README.md  activate_venv.sh  conductor-setup.sh  conductor.json  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
src/: __init__.py  gradio_ui.py  llm_client.py  pdf_processor.py  rag_system.py  vector_store.py
tests/: README.md  __init__.py  conftest.py  test_pdf_processor.py
