[project]
name = "doc-ama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.4.0",
    "gradio>=4.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.9.0",
    "pypdf2>=3.0.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "reportlab>=4.4.4",
]
